<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_nightMode"
        android:title="@string/settings__night_mode" />

    <ListPreference
        android:defaultValue="20"
        android:dialogTitle="@string/settings__font_size"
        android:entries="@array/TextFontSizes"
        android:entryValues="@array/TextFontSizes"
        android:key="pref_textFontSize"
        android:title="@string/settings__font_size" />

    <ListPreference
        android:defaultValue="400"
        android:dialogTitle="@string/settings__show_on_app_start"
        android:entries="@array/DefaultScreens"
        android:entryValues="@array/DefaultScreensIds"
        android:key="pref_defaultScreens"
        android:title="@string/settings__show_on_app_start" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_showOfficialUGCC"
        android:title="@string/settings__show_official_ugcc_texts" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_hideToolbarOnScrolling"
        android:title="@string/settings__hide_toolbar_on_scrolling" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_keepScreenOn"
        android:summaryOff="@string/settings__keep_screen_on_disabled"
        android:summaryOn="@string/settings__keep_screen_on_enabled"
        android:title="@string/settings__keep_screen_on"
        tools:defaultValue="false" />


    <Preference
        android:key="pref_aboutApp"
        android:title="@string/settings__about_app" />

</PreferenceScreen>