<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/svScroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_church_calendar__legend"
            android:textSize="18sp" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TableRow>

                <ImageView
                    android:id="@+id/ivIconPist"
                    style="@style/CalendarIconPist"
                    android:background="@drawable/background_pist_pist" />

                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:text="@string/about_church_calendar__pist" />
            </TableRow>

            <TableRow android:layout_marginTop="8dp">

                <ImageView
                    style="@style/CalendarIconPist"
                    android:background="@drawable/background_pist_pist"
                    app:srcCompat="@drawable/ic_pist_fish_red" />

                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:text="@string/about_church_calendar__strohyy_pist" />
            </TableRow>

            <TableRow android:layout_marginTop="8dp">

                <ImageView
                    style="@style/CalendarIconPist"
                    android:background="@drawable/background_pist_zahalnytsya" />

                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:text="@string/about_church_calendar__zahalnytsya" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

</ScrollView>